--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Brian's portfolio</title>
@@ -7,53 +7,53 @@
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 		@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Shadows+Into+Light&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Gotu&display=swap');
 	</style>
-
 </head>
 <body>
-	<header class="Hellotropica">
+	<header>
 		<h1>Brian Baugh</h1>
 		<h2>Software developer</h2>
 	</header>
 
 	<main>
-
+		<!-- Intro section-->
 		<img src="images/BriBri.jpg" alt="this is me">
 		<section>
-		
-
-		<div>
-			<p>
 			<h2>	Welcome! My name is Brian</h2>
-			I'm an aspiring software developer living in Altamonte Springs, FL. Ultimately aim to build clean, attractive & efficient websites, apps & tools.
-		
-			After perusing my wares :)....my body of work...Feel free to <a href="#contact">Contact me</a>!
-		
+			<p>
+			I'm an aspiring software developer living in Altamonte Springs, FL.  I'm looking forward to:
+			<ul>
+				<li>Building clean, attractive & efficient websites</li>
+				<li>Brainstorming tangible app solutions</li>
+				<li>Meshing with other goal-oriented developers</li>
+			</ul>
 			</p>
-		</div>
+			<p>After perusing my wares &#128517....my body of work...Feel free to <a href="#contact">Contact me</a>!</p>
 		</section>
 		<hr>
+
+		<!--About section -->
 
 		<section>
 			<h2>About Brian</h2>
 			<p>
-			Gamer, internet aficionado, consumer of memes, computer builder. Born & raised in jamaica, emigrated to the US many years ago. Dabbled in web development for many years, finally taking the plunge into full time web development. I like to think I have a keen understanding of what makes a good web page
+			Gamer, internet aficionado, consumer of memes, computer builder. Born & raised in Jamaica, emigrated to the US many years ago. Dabbled in web development for many years, finally taking the plunge into full time web development. I believe I have a firm understanding of what makes a great web page.
 			</p>
 		</section>
 		<hr>
+
+		<!--Contact section-->
+
 		<section  id="contact">
 			<h2>Contact Brian</h2>
-			<p>
-				<ol>
-				<li><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/">Linkedin</a></li>
-				<li><a href="https://github.com/beebaugh">GitHub</a></li>
-				<li><a href="mailto:beebaugh@gmail.com">beebaugh@gmail.com</a></li>
-				</ol>
-			</p>
-		
-		
+			<ol>
+				<li><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/" class="fa fa-linkedin" target="_blank"> Linkedin</a><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/"></a></li>
+				<li><a href="https://github.com/beebaugh" class="fa fa-github-square" target="_blank"> GitHub</a></li>
+				<li><a href="mailto:beebaugh@gmail.com" class="fa fa-envelope-square"> Email</a></li>
+			</ol>
 		</section>	
-		<img src="images/cranes roost.jpg" alt="Cranes roost">
+		<img src="images/cranes-roost.jpg" alt="Cranes roost">
 
 
 	</main>
