--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
 		<img src="images/BriBri.jpg" alt="this is me">
 		<section>
 			<h2>	Welcome! My name is Brian</h2>
-			<p>
-			I'm an aspiring software developer living in Altamonte Springs, FL.  I'm looking forward to:
+			<p>I'm an aspiring software developer living in Altamonte Springs, FL.  I'm looking forward to:</p>
 			<ul>
 				<li>Building clean, attractive & efficient websites</li>
 				<li>Brainstorming tangible app solutions</li>
 				<li>Meshing with other goal-oriented developers</li>
 			</ul>
-			</p>
-			<p>After perusing my wares &#128517....my body of work...Feel free to <a href="#contact">Contact me</a>!</p>
+			<p>After perusing my wares &#128517;....my body of work...Feel free to <a href="#contact">Contact me</a>!</p>
 		</section>
 		<hr>
 
@@ -48,7 +46,7 @@
 		<section  id="contact">
 			<h2>Contact Brian</h2>
 			<ol>
-				<li><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/" class="fa fa-linkedin" target="_blank"> Linkedin</a><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/"></a></li>
+				<li><a href="https://www.linkedin.com/in/brian-baugh-8842ba88/" target="_blank"> Linkedin</a></li>
 				<li><a href="https://github.com/beebaugh" class="fa fa-github-square" target="_blank"> GitHub</a></li>
 				<li><a href="mailto:beebaugh@gmail.com" class="fa fa-envelope-square"> Email</a></li>
 			</ol>
